--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600&family=Manrope&display=swap");
 
+:root {
+  --pale-white: rgb(255, 247, 240);
+  --custom-gray: rgt(122,116,110);
+}
+
 body {
   display: flex;
   justify-content: center;
@@ -9,6 +14,12 @@ body {
   font-family: "Plus Jakarta Sans", sans-serif;
 }
 
+main {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
 .introduction {
   padding-top: 1rem;
   text-align: center;
@@ -25,6 +36,15 @@ h1 {
   letter-spacing: -1px;
 }
 
+.picture-container {
+  width: 100%;
+  padding-inline: 2.25rem;
+  margin-top: 5.5rem;
+  margin-bottom: 2rem;
+}
+.profile-picture {
+}
+
 .introduction > p {
   padding-top: 1rem;
   width: 77%;
@@ -32,10 +52,11 @@ h1 {
 
 .index {
   display: grid;
+  width: 100%;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(6, 1fr);
-  row-gap: 1rem;
-  column-gap: 1rem;
+  row-gap: 1.4rem;
+  column-gap: 1.5rem;
   padding-block: 1.575rem;
   padding-inline: 1.125rem;
 }
@@ -44,12 +65,15 @@ h1 {
   padding: 1.5rem;
   display: flex;
   flex-flow: column;
+  justify-content: space-between;
   border-radius: 7px;
-  color: white; 
+  color: white;
+  font-size: 25px;
 }
 
 .index__item > div {
   align-self: flex-end;
+  padding-bottom: 1.5rem;
 }
 
 .index__item:nth-child(1) {
@@ -66,22 +90,20 @@ h1 {
 }
 
 .index__item:nth-child(4) {
+  grid-column: 1 / 3;
   background-color: salmon;
 }
 .index__item:nth-child(5) {
+  grid-column: 1 / 3;
   background-color: mediumaquamarine;
 }
 .index__item:nth-child(6) {
+  grid-column: 1 / 3;
   background-color: hsl(313, 45%, 22%);
-}
-h2 {
-  font-size: 3.5rem;
-}
-h3 {
-  font-size: 2rem;
 }
 
 .header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   padding: 1rem;
@@ -104,6 +126,67 @@ h3 {
   width: 3rem;
 }
 
+.presentation {
+  text-align: center;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: 95%;
+  gap: 1rem;
+  margin-bottom: 6rem;
+}
+.presentation > button {
+  border-radius: 30px;
+  background-color: salmon;
+  color: white;
+  border: none;
+  margin-top: 0.125rem;
+  font-size: 0.875rem;
+  padding-inline: 1.875rem;
+  font-weight: bold;
+  height: 2.685rem;
+}
+
+.slider {
+  display: flex;
+  overflow: hidden;
+  margin-block: 1.7rem;
+  height: 11.5rem;
+}
+.slider-control {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  gap: 1rem;
+}
+.btn {
+  background-color: black;
+  min-width: 4rem;
+  min-height: 4rem;
+  border-radius: 100%;
+}
+.left {
+  background-image: url(assets/icon-arrow-left.svg) ;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.right {
+  background-image: url(assets/icon-arrow-right.svg) ;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.carousel {
+  margin-bottom: 6.2rem;
+}
+.panel {
+  background-color: black;
+  margin-inline: 1rem;
+  border-radius: 10px;
+  color: white;
+  text-align: center;
+  padding-block: 3rem;
+}
 /*
   1. Use a more-intuitive box-sizing model.
 */
