--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
   --pale-white: rgb(255, 247, 240);
-  --custom-gray: rgt(122,116,110);
+  --custom-gray: rgt(122, 116, 110);
 }
 
 body {
@@ -19,7 +19,10 @@ main {
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  width: 375px;
+  background-color: var(--pale-white);
 }
+
 .introduction {
   padding-top: 1rem;
   text-align: center;
@@ -81,6 +84,7 @@ h1 {
   grid-row: 1 / 3;
   background-color: slateblue;
 }
+
 .index__item:nth-child(2) {
   background-color: sandybrown;
 }
@@ -93,10 +97,12 @@ h1 {
   grid-column: 1 / 3;
   background-color: salmon;
 }
+
 .index__item:nth-child(5) {
   grid-column: 1 / 3;
   background-color: mediumaquamarine;
 }
+
 .index__item:nth-child(6) {
   grid-column: 1 / 3;
   background-color: hsl(313, 45%, 22%);
@@ -110,16 +116,10 @@ h1 {
 }
 
 .header > button {
-  border-radius: 30px;
   background-color: black;
   color: white;
-  border: none;
   margin-top: 0.125rem;
-  font-size: 0.875rem;
-  padding-inline: 1.875rem;
-  font-weight: bold;
   padding-block: 0.75rem;
-  height: 2.685rem;
 }
 
 .logo {
@@ -136,16 +136,11 @@ h1 {
   gap: 1rem;
   margin-bottom: 6rem;
 }
+
 .presentation > button {
-  border-radius: 30px;
-  background-color: salmon;
-  color: white;
-  border: none;
   margin-top: 0.125rem;
-  font-size: 0.875rem;
-  padding-inline: 1.875rem;
-  font-weight: bold;
-  height: 2.685rem;
+  color: white;
+  background-color: salmon;
 }
 
 .slider {
@@ -154,31 +149,48 @@ h1 {
   margin-block: 1.7rem;
   height: 11.5rem;
 }
+
 .slider-control {
   display: flex;
   width: 100%;
   justify-content: center;
   gap: 1rem;
 }
-.btn {
+
+.round-btn {
   background-color: black;
   min-width: 4rem;
   min-height: 4rem;
   border-radius: 100%;
+  cursor: pointer;
 }
+
+.btn {
+  border-radius: 30px;
+  border: none;
+  font-size: 0.875rem;
+  padding-inline: 1.875rem;
+  font-weight: bold;
+  height: 2.685rem;
+  cursor: pointer;
+}
+
 .left {
-  background-image: url(assets/icon-arrow-left.svg) ;
+  background-image: url(assets/icon-arrow-left.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
+
 .right {
-  background-image: url(assets/icon-arrow-right.svg) ;
+  background-image: url(assets/icon-arrow-right.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
+
 .carousel {
   margin-bottom: 6.2rem;
 }
+
 .panel {
   background-color: black;
   margin-inline: 1rem;
@@ -186,6 +198,27 @@ h1 {
   color: white;
   text-align: center;
   padding-block: 3rem;
+  margin-bottom: 1.775rem;
+}
+.panel > p {
+  padding-inline: 2rem;
+  padding-block: 1.275rem;
+  line-height: 1.6;
+  font-size: 16px;
+}
+.panel > button {
+  color: white;
+  background-color: salmon;
+}
+footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1rem;
+}
+footer > button {
+  color: white;
+  background-color: black;
 }
 /*
   1. Use a more-intuitive box-sizing model.
