--- a/style.css
+++ b/style.css
@@ -45,8 +45,6 @@ h1 {
   margin-top: 5.5rem;
   margin-bottom: 2rem;
 }
-.profile-picture {
-}
 
 .introduction > p {
   padding-top: 1rem;
@@ -145,6 +143,7 @@ h1 {
 
 .slider {
   display: flex;
+  scroll-behavior: smooth;
   overflow: hidden;
   margin-block: 1.7rem;
   height: 11.5rem;
@@ -200,26 +199,32 @@ h1 {
   padding-block: 3rem;
   margin-bottom: 1.775rem;
 }
+
 .panel > p {
   padding-inline: 2rem;
   padding-block: 1.275rem;
   line-height: 1.6;
   font-size: 16px;
 }
+
 .panel > button {
   color: white;
   background-color: salmon;
 }
+
 footer {
   display: flex;
   justify-content: space-between;
   width: 100%;
   padding: 1rem;
 }
+
 footer > button {
   color: white;
   background-color: black;
 }
+
+/* CSS Resets */
 /*
   1. Use a more-intuitive box-sizing model.
 */
