--- a/style.css
+++ b/style.css
@@ -2,7 +2,13 @@
 
 :root {
   --pale-white: rgb(255, 247, 240);
-  --custom-gray: rgt(122, 116, 110);
+  --custom-gray: rgb(122, 116, 110);
+  --light-salmon: rgb(243, 158, 158);
+  --sandy-brown: rgb(244, 165, 96);
+  --purple: rgb(117, 92, 222);
+  --salmon: rgb(235, 117, 101);
+  --blueish-green: rgb(97, 196, 183);
+  --dark-purple: rgb(85, 32, 73);
 }
 
 body {
@@ -13,7 +19,9 @@ body {
   font-size: 1.125rem;
   font-family: "Plus Jakarta Sans", sans-serif;
 }
-
+p { 
+  color: var(--custom-gray);
+}
 main {
   display: flex;
   flex-flow: column;
@@ -52,6 +60,7 @@ h1 {
 .introduction > p {
   padding-top: 1rem;
   width: 77%;
+  color: var(--custom-gray);
 }
 
 .index {
@@ -67,6 +76,7 @@ h1 {
 
 .index__item {
   padding: 1.5rem;
+  border-radius: 25px;
   display: flex;
   flex-flow: column;
   justify-content: space-between;
@@ -82,30 +92,30 @@ h1 {
 .index__item:nth-child(1) {
   grid-column: 1 / 3;
   grid-row: 1 / 3;
-  background-color: slateblue;
+  background-color: var(--purple);
 }
 
 .index__item:nth-child(2) {
-  background-color: sandybrown;
+  background-color: var(--sandy-brown);
 }
 
 .index__item:nth-child(3) {
-  background-color: lightsalmon;
+  background-color: var(--light-salmon);
 }
 
 .index__item:nth-child(4) {
   grid-column: 1 / 3;
-  background-color: salmon;
+  background-color: var(--salmon);
 }
 
 .index__item:nth-child(5) {
   grid-column: 1 / 3;
-  background-color: mediumaquamarine;
+  background-color: var(--blueish-green);
 }
 
 .index__item:nth-child(6) {
   grid-column: 1 / 3;
-  background-color: hsl(313, 45%, 22%);
+  background-color: var(--dark-purple);
 }
 
 .header {
@@ -141,13 +151,15 @@ h1 {
 .presentation > button {
   margin-top: 0.125rem;
   color: white;
-  background-color: salmon;
+  background-color: var(--salmon);
 }
+
 .details {
   display: flex;
   flex-flow: column;
   align-items: center;
 }
+
 .slider {
   display: flex;
   scroll-behavior: smooth;
@@ -215,9 +227,9 @@ h1 {
   font-size: 16px;
 }
 
-.panel > button {
+.panel > div > button {
   color: white;
-  background-color: salmon;
+  background-color: var(--salmon);
 }
 
 footer {
@@ -268,16 +280,16 @@ img {
     grid-template-rows: repeat(3, 1fr);
   }
   .index__item:nth-child(3) {
-    background-color: rgb(243, 158, 158);
+    background-color: var(--light-salmon);
   }
   .index__item:nth-child(4) {
-    background-color: rgb(97, 196, 183);
+    background-color: var(--blueish-green);
   }
 
   .index__item:nth-child(5) {
     grid-column: 3 / 5;
     grid-row: 2;
-    background-color: salmon;
+    background-color: var(--salmon);
   }
   .index__item:nth-child(6) {
     grid-column: 3 / 5;
@@ -311,7 +323,7 @@ img {
     gap: 1.5rem;
   }
   .slider-control {
-    margin-bottom: 1.5rem;;
+    margin-bottom: 1.5rem;
   }
   .panel {
     margin-inline: 2.3rem;
@@ -335,6 +347,133 @@ img {
 @media (min-width: 1300px) {
   main {
     width: 1440px;
+  }
+
+  .header {
+    padding: 2.25rem;
+    padding-inline: 10rem;
+  }
+  .btn {
+    padding-inline: 2.76rem;
+    height: 3.5rem;
+    font-size: 16px;
+  }
+  .header > button {
+    margin-right: 0.5rem;
+  }
+  .header > img {
+    width: 64px;
+  }
+  h1 {
+    font-size: 60px;
+    padding-block: 0.775rem;
+  }
+  .introduction > p {
+    width: 75%;
+    padding-bottom: 1.75rem;
+  }
+  .index {
+    padding-block: 2.25rem;
+    padding-inline: 9.5rem;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .index__item { 
+    border-radius: 10px;
+  }
+  .index__item:nth-child(1) {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+  }
+  .index__item:nth-child(3) {
+    background-color: var(--light-salmon);
+  }
+  .index__item:nth-child(4) {
+    grid-column: 5 / 7;
+    background-color: var(--blueish-green);
+  }
+
+  .index__item:nth-child(5) {
+    background-color: var(--salmon);
+  }
+  .index__item:nth-child(6) {
+    grid-row: 2;
+    grid-column: 5 / 7;
+  }
+  .picture-container {
+    align-self: flex-start;
+    width: 33%;
+    margin-top: 1.5rem;
+    margin-left: 9.5rem;
+    position: relative;
+  }
+  .details {
+    flex-flow: row;
+    justify-content: center;
+    margin-top: 5rem;
+    margin-bottom: 8.5rem;
+  }
+  .presentation {
+    width: 40%;
+    margin: 0;
+    left: -20px;
+    position: relative;
+    text-align: left;
+    align-items: flex-start;
+  }
+  .presentation > h2 {
+    font-size: 40px;
+    padding-right: 3rem;
+    padding-bottom: 1rem;
+  }
+  .presentation > p {
+    margin-bottom: 1rem;
+  }
+  .slider {
+    margin-top: 1rem;
+    height: 22rem;
+    margin-bottom: 3.8rem;
+    gap: 1.5rem;
+  }
+  .slider-control {
+    margin-bottom: .125rem;
+  }
+  .panel {
+    width: 75%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-left: 2rem;
+    padding-bottom: 3rem;
+  }
+  .panel > h2 {
+    font-size: 50px;
+    
+  }
+  .panel > p {
+    text-align: left;
+    font-size: 18px;
+    padding-left: .3rem;
+    padding-right: .1rem;
+    grid-row: 2;
+    color: white;
+  }
+  .panel > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-row: 1 / 3;
+    grid-column: 2;
+    margin-left: 9rem;
+  }
+  footer {
+    padding: 2.25rem;
+    padding-inline: 10rem;
+  }
+  footer > button {
+    margin-right: 0.5rem;
+  }
+  .logo {
+    width: 4rem;
   }
 }
 
